# django-geowidgets

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE  README.rst  pyproject.toml
.github/workflows/: run-tests.yml
geowidgets/: __init__.py  geowidgets.py
tests/: test_geowidgets.py
